src/test/custom/invalid/struct/structElemCountWrong.wacc
# Output:
# #semantic error#

# Program:

begin
  struct a is {int i, char j}
  a x = new a (1)
end